# ROS2_bevfusion

./: CMakeLists.txt  README.md  package.xml
bevfusion/lib/libraries/cuOSD/src/textbackend/: backend.hpp
bevfusion/src/bevfusion/: bevfusion.cpp  bevfusion.hpp  camera-backbone.cu  camera-bevpool.cu  camera-geometry.cu  head-transbbox.cu  lidar-voxelization.cu  lidar-voxelization.hpp  lidar_feature_encoder.cu  lidar_feature_encoder.hpp  pillar_scatter.cu  pillar_scatter.hpp  pillarscatter-kernel.cu  point_encoder.cu  point_encoder.hpp  transfusion.cu  transfusion.hpp
bevfusion/src/common/: tensor.cu  tensor.hpp  visualize.cu
configs/: chengdu2000_pillar.yaml  chengdu30000_pillar.yaml  chengdu30000_pillar_lidar_trans_for_leike.yaml
include/: model.hpp  node.hpp
launch/: bevfusion.launch.xml
model/chengdu2000_pillar_lidar/: camera.vtransform_nouse.plan  point_encoder.plan
src/: model.cpp  node.cpp
